# morphogenesis

./: .gitignore  .mandatory-tooling  .roborev.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  PHASE_79_BRIEF.md  README.md  TRACE_EXPLANATION.md  calculate_dedup.py  modal_batch_bench.py  modal_bench.py  modal_chacha_dpf_bench.py  modal_create_volume.py  modal_cuda_dpf_bench.py  modal_fused_bench.py  modal_gpu_dpf_bench.py  modal_mainnet_bench.py  modal_rust_test.py  modal_sharded_bench.py  modal_sync_r2.py
.github/workflows/: ci.yml  nightly-smoke.yml
backlog/: config.yml
backlog/docs/: task-commit-linking.md
backlog/tasks/: task-1 - Implement-eth_getStorageAt-RPC-method.md  task-1.1 - Gate-verifiable-PIR-sumcheck-binius-behind-feature-flag.md  task-1.2 - Gate-verifiable-PIR-sumcheck-binius-behind-feature-flag.md  task-10 - PIR-result-caching-layer.md  task-11 - Batch-query-support.md  task-12 - WASM-build-for-browser-integration.md  task-13 - Access-list-optimization-for-eth_call.md  task-13 - Implement-eth_createAccessList-method-privacy-preserving.md  task-14 - Storage-slot-prefetching-prediction.md  task-15 - Private-eth_estimateGas-and-tx-cache.md  task-16 - Fix-roborev-findings-on-task-15.md  task-17 - Datadog-service-map-and-E2E-monitoring-baseline.md  task-17 - Datadog-service-map-and-e2e-monitoring.md  task-17 - EPIC-deterministic-e2e-with-subset-data.md  task-17.1 - Build-subset-fixtures-for-deterministic-e2e.md  task-17.2 - Harden-e2e-launcher-and-readiness-checks.md  task-17.3 - Add-deterministic-private-path-rpc-e2e-assertions.md  task-17.4 - Add-ci-job-for-deterministic-e2e.md  task-17.5 - Add-nightly-live-upstream-smoke-tests.md  task-18 - Optimize-parallel-scan-reduction-to-avoid-extra-allocations.md  task-19 - Fix-parallel-scan-batching-path-implement-or-remove-dead-parameter.md  task-2 - Add-client-library-support-for-storage-queries.md  task-20 - Reduce-PIR-client-cache-lock-contention-via-sharding.md  task-21 - Research-server-side-multi-query-scan-batching-ROI.md  task-22 - Deep-benchmark-and-prototype-plan-for-true-scan-level-batching.md  task-23 - Implement-fused-multi-query-row-scan-for-query-batch-portable-guarded.md  task-24 - Add-GPU-page-batch-endpoint-and-wire-batched-CUDA-scan-path.md  task-25 - Optimize-CUDA-runtime-path-persistent-buffers-and-reduced-lock-scope.md  task-26 - Adaptive-micro-batching-cap-at-2-for-GPU-page-queries.md  task-27 - Prototype-multi-stream-single-query-dispatch-for-GPU-page-PIR.md  task-28 - Evaluate-CUDA-Graph-replay-for-steady-page-query-workloads.md  task-29 - Prototype-tiled-batch-kernel-to-limit-shared-memory-pressure.md  task-3 - Integrate-local-EVM-for-eth_call.md  task-30 - Compare-batching-prototypes-on-H100-and-select-rollout-strategy.md  task-31 - Prototype-per-stream-CUDA-workspace-pool-for-concurrent-page-PIR-scans.md  task-32 - Implement-adaptive-GPU-page-batching-policy-latency-vs-throughput-modes.md  task-33 - Harden-morphogen-server-production-binary-for-real-deployments.md  task-34 - Implement-snapshot-ingestion-epoch-rotation-flow-for-production.md  task-35 - Add-authN-authZ-and-perimeter-controls-for-server-admin-surfaces.md  task-36 - Close-remaining-JSON-RPC-compatibility-gaps-in-adapter.md  (+22 more)
crates/morphogen-client/: Cargo.toml
crates/morphogen-client/src/: fixture.rs  gpu.rs  lib.rs  network.rs  page.rs  verification_test.rs
crates/morphogen-core/: Cargo.toml
crates/morphogen-core/src/: constants.rs  cuckoo.rs  delta.rs  epoch.rs  lib.rs  sumcheck.rs
crates/morphogen-dpf/: Cargo.toml
crates/morphogen-dpf/benches/: dpf_bench.rs
crates/morphogen-dpf/src/: lib.rs  page.rs
crates/morphogen-gpu-dpf/: Cargo.toml  build.rs
crates/morphogen-gpu-dpf/benches/: chacha_prg_bench.rs
crates/morphogen-gpu-dpf/cuda/: binius_test.cu  chacha_dpf.cu  fused_kernel.cu  fused_kernel_optimized.cu  fused_kernel_optimized_v2.cu  fused_kernel_optimized_v3.cu
crates/morphogen-gpu-dpf/src/: chacha_prg.rs  dpf.rs  kernel.rs  lib.rs  storage.rs
crates/morphogen-rpc-adapter/: Cargo.toml
crates/morphogen-rpc-adapter/src/: block_cache.rs  block_poller.rs  code_resolver.rs  config.rs  evm.rs  filters.rs  lib.rs  log_filter.rs  main.rs  methods.rs  pir_db.rs  proxy.rs  receipt_fetch.rs  state.rs  telemetry.rs  tests.rs
crates/morphogen-rpc-adapter/src/block_cache/: mod.rs  tests.rs
crates/morphogen-rpc-adapter/tests/: config_env.rs
crates/morphogen-server/: Cargo.toml
crates/morphogen-server/src/: config.rs  epoch.rs  lib.rs  network.rs  profiling.rs  scan.rs  server.rs
crates/morphogen-server/src/network/: admin_auth.rs  api.rs  dto.rs  gpu_batch.rs  gpu_metrics.rs  gpu_scan.rs  scan_helpers.rs  serde_hex.rs  snapshot_config.rs  telemetry.rs  ws_query.rs
crates/morphogen-server/src/network/api/: mod.rs  tests.rs
crates/morphogen-server/tests/: e2e_pir.rs  network_api.rs
crates/morphogen-storage/: Cargo.toml
crates/morphogen-wasm-gateway/: Cargo.toml
crates/morphogen-wasm-gateway/src/: lib.rs
crates/reth-adapter/: Cargo.toml
crates/reth-adapter/src/: lib.rs  main.rs
crates/reth-adapter/tests/: reth_dump_cli.rs
crates/ubt-exex/: Cargo.toml
crates/ubt-exex/src/: lib.rs  main.rs
docs/: ADMIN_SECURITY.md  CI_RETH_GPU_COVERAGE.md  CRYPTOGRAPHY.md  CRYPTO_ANALYSIS.md  DATADOG_E2E.md  DATA_STRUCTURES.md  DEDUPLICATION_REPORT.md  KANBAN.md  KANBAN_QPS.md  KANBAN_RPC_ADAPTER.md  KANBAN_VERIFIABLE_PIR.md  OBSERVABILITY.md  OPENTELEMETRY.md  PAGE_PIR_INTEGRATION.md  PERFORMANCE.md  PLINKO_OPTIMIZATION.md  PROFILING_GUIDE.md  RPC_CLIENT_SPEC.md  VERIFIABLE_DPF_BENCHMARK.md  VERIFIABLE_PIR_REPORT.md  WASM_GATEWAY.md  morphogenesis_EDD.md  morphogenesis_paper.md  morphogenesis_protocol.md
docs/archive/: ICEBOX.md  KANBAN_CODE_SERVING.md  KANBAN_DEPLOYMENT.md  morphogenesis_EDD.md  morphogenesis_paper.md
docs/benchmarks/: 2026-02-18-task-22-batch-query-bench-iter30.csv  (+16 more)
experiments/: calculate_dedup_hsiao.py
ops/: README.md
scripts/: r2_upload.py  test_filter_e2e.sh  test_ops_artifacts.sh  test_rpc_e2e.sh  test_rpc_e2e_datadog.sh  test_wallet_compat.sh  upload_r2.sh
(+44 files in other folders)
