[package]
name = "morphogen-client"
version = "0.1.0"
edition = "2021"

[dependencies]
morphogen-core = { path = "../morphogen-core" }
morphogen-dpf = { path = "../morphogen-dpf", features = ["fss"] }
morphogen-gpu-dpf = { path = "../morphogen-gpu-dpf" }
rand = "0.8"

[dev-dependencies]
rand = "0.8"
fss-rs = { path = "../morphogen-dpf/vendor/fss-rs", features = ["stable"] }
