[package]
name = "morphogen-client"
version = "0.1.0"
edition = "2021"

[dependencies]
morphogen-core = { path = "../morphogen-core", default-features = false }
morphogen-dpf = { path = "../morphogen-dpf", features = ["fss"] }
morphogen-gpu-dpf = { path = "../morphogen-gpu-dpf" }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-primitives = "1.5"
binius_field = { git = "https://github.com/IrreducibleOSS/binius", optional = true }

[dev-dependencies]
rand = "0.8"
fss-rs = { path = "../morphogen-dpf/vendor/fss-rs", features = ["stable"] }
mockito = "1.2"

[features]
default = []
verifiable-pir = ["dep:binius_field", "morphogen-core/verifiable-pir"]
