 [package]
 name = "morphogen-dpf"
 version = "0.1.0"
 edition = "2021"

 [lib]
 name = "morphogen_dpf"
 path = "src/lib.rs"

 [features]
 default = []
 avx512 = []
 fss = ["dep:fss-rs"]

 [dependencies]
 rand = "0.8"
 fss-rs = { path = "vendor/fss-rs", optional = true, features = ["stable", "multi-thread"] }

 [dev-dependencies]
 criterion = "0.5"

 [[bench]]
 name = "dpf_bench"
 harness = false

 [[bin]]
 name = "profile_dpf"
 required-features = ["fss"]
