[package]
name = "morphogen-rpc-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
morphogen-client = { path = "../morphogen-client" }
morphogen-core = { path = "../morphogen-core" }
jsonrpsee = { version = "0.24", features = ["server", "http-client"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
hex = "0.4"
rand = "0.8"
async-trait = "0.1"
revm = "34"
alloy-primitives = "1.5"
