 [package]
 name = "morphogen-server"
 version = "0.1.0"
 edition = "2021"

 [dependencies]
 morphogen-core = { path = "../morphogen-core" }
 morphogen-dpf = { path = "../morphogen-dpf", features = ["fss"] }
 morphogen-storage = { path = "../morphogen-storage" }
 rayon = "1.10"
 rand = "0.8"

 # Network layer
 axum = { version = "0.8", features = ["ws"], optional = true }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
 serde = { version = "1", features = ["derive"], optional = true }
 serde_json = { version = "1", optional = true }
 hex = { version = "0.4", optional = true }
 tower = { version = "0.5", features = ["limit"], optional = true }

 [dev-dependencies]
 morphogen-client = { path = "../morphogen-client" }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 reqwest = { version = "0.12", features = ["json"] }
 tokio-tungstenite = "0.26"
 futures-util = "0.3"
 tower = "0.5"
 serde_json = "1"

 [features]
 default = []
 avx512 = ["morphogen-dpf/avx512"]
 profiling = []
 streaming_stores = []
 parallel = []
 network = ["axum", "tokio", "serde", "serde_json", "hex", "tower"]

 [lib]
 name = "morphogen_server"
 path = "src/lib.rs"
