[package]
name = "ubt-exex"
version = "0.1.0"
edition = "2021"

[dependencies]
morphogen-core = { path = "../morphogen-core" }
morphogen-storage = { path = "../morphogen-storage" }
rand = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
sha3 = "0.10"
clap = { version = "4.4", features = ["derive"] }
eyre = "0.6"
futures-util = "0.3"
reth-db = { git = "https://github.com/paradigmxyz/reth", optional = true }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", optional = true }

[features]
default = []
reth = ["dep:reth-db", "dep:reth-primitives"]